# active-labeling

./: .gitignore  LIBSVM.py  LICENSE  README.md  README.rst  auxillary.py  figure_1.ipynb  figure_1_app.ipynb  figure_2b.ipynb  figure_3.ipynb  figure_3b.ipynb  figure_4.ipynb  figure_4b.ipynb  figure_4c.ipynb  figure_5.ipynb  figure_6.ipynb  figure_6b.ipynb  figure_6c.ipynb  kernel.py  requirements.txt  script.py  script_2.py  setup.cfg
scripts/: LIBSVM.ipynb  calcofi.py  classification_1.ipynb  classification_2.ipynb  regression_evolution.py  regression_fail_heavyside.ipynb  regression_performance.ipynb  regression_reconstruction.ipynb  synthetic_regression.py  weather.py
src/activelabeling/: LIBSVM.py  __init__.py  auxillary.py  config.py
