[metadata]
name = Active Labeling
version = 0.0.0
author = Vivien Cabannes
author_email = vivien.cabannes@gmail.com
description = Learning by querying weak information to stream stochastic gradients 
long_description = file: README.md
url = https://github.com/VivienCabannes/active_labeling
project_urls =
    Bug Tracker = https://github.com/VivienCabannes/active_labeling/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src test=pytest